<resources>
    <string name="app_name">我吃大西瓜</string>
    <string name="waiting">正在加载</string>
    <string name="net_not_connected">网络连接失败，请检查网络设置</string>
    <string name="permission_explain_reason">应用需要获取读写权限，以便于缓存媒体文件</string>
    <string name="permission_forward_desc">您需要在设置中手动开启权限~</string>
    <string name="mine">我的</string>
    <string name="account_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="re_password_hint">确认登录密码</string>
    <string name="register_fail">请输入账户名和密码</string>
    <string name="login_fail">请输入账号密码</string>
    <string name="password_different">两次输入的密码不一致</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_tip">还没有账号？ 去注册</string>
    <string name="login_tip">已注册？ 去登录</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="skip">跳过</string>
    <string name="auto_fill_hint">自动填充</string>
    <string name="question_answer">问答</string>
    <string name="discovery">发现</string>
    <string name="edit">编辑</string>
    <string name="nickName">昵称：</string>
    <string name="rank">排名：</string>
    <string name="coinCount">积分：</string>
    <string name="app_notify">站内通知</string>
    <string name="my_collection">收藏管理</string>
    <string name="mine_publish">我的发布</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_login_hint">确定要退出登录吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="edit_info">编辑资料</string>
    <string name="upload_photo">上传图片</string>
    <string name="choose_birth_date">请选择出生年月日</string>
    <string name="save_and_submit">保存并提交</string>
    <string name="exit_tip">再按一次退出APP</string>
    <string name="home">主页</string>
    <string name="search">搜索</string>
    <string name="retry">重试</string>
    <string name="my_collect">我的收藏</string>
    <string name="collect_article">收藏文章</string>
    <string name="collect_website">收藏网站</string>
    <string name="result_empty">啥都木有找到~</string>
    <string name="unCollect_success">取消收藏成功~</string>
    <string name="myCoin">我的积分</string>
    <string name="coinRank">积分排行榜</string>
    <string name="app_setting">设置</string>
    <string name="aboutUs">关于作者</string>
    <string name="slogan">将心比心，便是佛心!</string>
    <string name="about_us_github">Github</string>
    <string name="about_us_jianshu">简书</string>
    <string name="about_us_qq">QQ</string>
    <string name="about_us_QQ_value">706375160</string>
    <string name="about_us_jianshu_value">https://www.jianshu.com/u/df82428f0062</string>
    <string name="about_us_github_value">https://github.com/yuaihen</string>
    <string name="clear_cache_tip">确定要清除缓存吗？</string>
    <string name="dart_mode">深色模式</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_success">缓存清除成功</string>
    <string name="knowledge_system">体系</string>
    <string name="navigation">导航</string>
    <string name="official_accounts">公众号</string>
    <string name="project">项目</string>
    <string name="search_hint">多个关键词用空格隔开</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">历史搜索</string>
    <string name="clear">清除</string>
    <string name="clear_history_confirm">确定要清空搜索历史？</string>


</resources>