<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yuaihen.wcdxg.ui.widget.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleName="@string/aboutUs" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/bili_bili_pink"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/head"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/head"
        app:layout_constraintRight_toRightOf="@+id/head"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/iv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_about_us_github"
        app:layout_constraintLeft_toLeftOf="@+id/tv_jianshu"
        app:layout_constraintRight_toRightOf="@+id/tv_jianshu"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_jianshu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="简"
        android:textColor="@color/bili_bili_pink"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_github" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_about_us_qq"
        app:layout_constraintEnd_toEndOf="@+id/tv_jianshu"
        app:layout_constraintStart_toStartOf="@+id/tv_jianshu"
        app:layout_constraintTop_toBottomOf="@+id/tv_jianshu" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/about_us_github"
        android:textColor="@color/bili_bili_pink"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_github"
        app:layout_constraintLeft_toRightOf="@+id/iv_github"
        app:layout_constraintTop_toTopOf="@+id/iv_github" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_jianshu"
        android:textColor="@color/bili_bili_pink"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_jianshu"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        app:layout_constraintLeft_toRightOf="@+id/iv_github"
        app:layout_constraintTop_toTopOf="@+id/tv_jianshu" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_qq"
        android:textColor="@color/bili_bili_pink"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_githubUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/about_us_github_value"
        android:textColor="@color/main_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/tv_jianshuUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_jianshu_value"
        android:textColor="@color/main_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintRight_toRightOf="@+id/tv_githubUrl"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_QQ_value"
        android:textColor="@color/main_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintRight_toRightOf="@+id/tv_githubUrl"
        app:layout_constraintTop_toTopOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>