<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg"
    android:orientation="vertical">

    <com.yuaihen.wcdxg.ui.widget.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:titleName="@string/edit_info"
        app:titleShowBackIcon="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_change_head_photo"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/shape_login_corner_white_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_head"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_head_test"
                    app:riv_oval="true"
                    tools:src="@drawable/ic_head_test" />

                <TextView
                    android:id="@+id/tv_upload_photo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="27dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="@string/upload_photo"
                    android:textColor="@color/main_blue"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_login_corner_white_10dp"
                app:layout_constraintEnd_toEndOf="@+id/ll_change_head_photo"
                app:layout_constraintStart_toStartOf="@+id/ll_change_head_photo"
                app:layout_constraintTop_toBottomOf="@+id/ll_change_head_photo">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/mine_user_title_color"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/nickName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.yuaihen.wcdxg.ui.widget.EditTextWithClear
                    android:id="@+id/edit_name"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="@string/auto_fill_hint"
                    android:background="@color/white"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/mine_user_value"
                    android:textSize="14sp"
                    app:clearIcon="@drawable/ic_baseline_clear_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/tv_name"
                    app:layout_constraintStart_toEndOf="@+id/tv_name"
                    app:layout_constraintTop_toTopOf="@+id/tv_name"
                    tools:text="黄大仙" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/mine_view_line"
                    app:layout_constraintEnd_toEndOf="@+id/edit_name"
                    app:layout_constraintStart_toStartOf="@+id/edit_name"
                    app:layout_constraintTop_toBottomOf="@+id/edit_name" />

                <TextView
                    android:id="@+id/tv_id_number"
                    style="@style/mine_user_title_color"
                    android:layout_marginTop="20dp"
                    android:text="@string/rank"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/view4" />

                <com.yuaihen.wcdxg.ui.widget.EditTextWithClear
                    android:id="@+id/edit_police_number"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="@string/auto_fill_hint"
                    android:background="@color/white"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/mine_user_value"
                    android:textSize="14sp"
                    app:clearIcon="@drawable/ic_baseline_clear_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_id_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/tv_id_number"
                    app:layout_constraintStart_toEndOf="@+id/tv_name"
                    app:layout_constraintTop_toTopOf="@+id/tv_id_number"
                    tools:text="0215665656" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/mine_view_line"
                    app:layout_constraintEnd_toEndOf="@+id/edit_police_number"
                    app:layout_constraintStart_toStartOf="@+id/edit_police_number"
                    app:layout_constraintTop_toBottomOf="@+id/edit_police_number" />

                <TextView
                    android:id="@+id/tv_coin_count"
                    style="@style/mine_user_title_color"
                    android:layout_marginTop="20dp"
                    android:text="@string/rank"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/view5" />

                <com.yuaihen.wcdxg.ui.widget.EditTextWithClear
                    android:id="@+id/edit_phone_number"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="@string/auto_fill_hint"
                    android:background="@color/white"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/mine_user_value"
                    android:textSize="14sp"
                    app:clearIcon="@drawable/ic_baseline_clear_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_coin_count"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/tv_coin_count"
                    app:layout_constraintStart_toEndOf="@+id/tv_name"
                    app:layout_constraintTop_toTopOf="@+id/tv_coin_count"
                    tools:text="18888888888" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_login_corner_white_10dp"
                app:layout_constraintEnd_toEndOf="@+id/ll_change_head_photo"
                app:layout_constraintStart_toStartOf="@+id/ll_change_head_photo"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <TextView
                    android:id="@+id/tv_birth_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@color/white"
                    android:hint="@string/choose_birth_date"
                    android:textColor="@color/main_blue"
                    android:textColorHint="@color/mine_user_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_select_birth_date"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_mine_dialog_corner_5dp"
                android:backgroundTint="@color/main_blue"
                android:text="@string/save_and_submit"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>